// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnChart renders a column chart 1`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(150, 100)">
            <g class="ez-bars">
              <rect
                fill="#1f77b4"
                x="0"
                y="0"
                width="0"
                height="0"
                data-testid="ez-bar"
                class="ez-bar"
              >
              </rect>
              <rect
                fill="#1f77b4"
                x="0"
                y="0"
                width="0"
                height="0"
                data-testid="ez-bar"
                class="ez-bar"
              >
              </rect>
              <rect
                fill="#1f77b4"
                x="0"
                y="0"
                width="0"
                height="0"
                data-testid="ez-bar"
                class="ez-bar"
              >
              </rect>
            </g>
            <g
              text-anchor="middle"
              transform="translate(0, 0)"
              class="ez-axis"
            >
              <path
                d="M0,0V0V-0.5H0V0V0"
                class="ez-axis-path"
              >
              </path>
            </g>
            <g
              text-anchor="end"
              transform="translate(0, 0)"
              class="ez-axis"
            >
              <path
                d="M0,0H0H-0.5V0H0,0"
                class="ez-axis-path"
              >
              </path>
            </g>
          </g>
        </svg>
      </div>
      <div class="ez-legend">
      </div>
    </div>
    <div
      class="ez-tooltip"
      style="left: 0px; top: 0px; opacity: 0;"
    >
    </div>
  </div>
</div>
`;

exports[`ColumnChart renders a column chart 2`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(150, 100)">
            <g class="ez-bars">
              <rect
                fill="red"
                x="31.25"
                y="400"
                width="125"
                height="0"
                data-testid="ez-bar"
                class="ez-bar"
              >
              </rect>
              <rect
                fill="blue"
                x="187.5"
                y="0"
                width="125"
                height="400"
                data-testid="ez-bar"
                class="ez-bar"
              >
              </rect>
              <rect
                fill="green"
                x="343.75"
                y="200"
                width="125"
                height="200"
                data-testid="ez-bar"
                class="ez-bar"
              >
              </rect>
            </g>
            <g
              text-anchor="middle"
              transform="translate(0, 400)"
              class="ez-axis"
            >
              <path
                d="M0.5,6V-6V-0.5H500.5V6V-6"
                class="ez-axis-path"
              >
              </path>
              <g
                transform="translate(93.75, 0)"
                class="ez-axis-tick"
              >
                <line
                  x2="0"
                  y2="6"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  y="9"
                  dy="0.6em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(0 0 0)"
                  class="ez-axis-tick-text"
                >
                  Alpha
                </text>
              </g>
              <g
                transform="translate(250, 0)"
                class="ez-axis-tick"
              >
                <line
                  x2="0"
                  y2="6"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  y="9"
                  dy="0.6em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(0 0 0)"
                  class="ez-axis-tick-text"
                >
                  Beta
                </text>
              </g>
              <g
                transform="translate(406.25, 0)"
                class="ez-axis-tick"
              >
                <line
                  x2="0"
                  y2="6"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  y="9"
                  dy="0.6em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(0 0 0)"
                  class="ez-axis-tick-text"
                >
                  Gamma
                </text>
              </g>
            </g>
            <g
              text-anchor="end"
              transform="translate(0, 0)"
              class="ez-axis"
            >
              <path
                d="M6,400.5H-6H-0.5V0.5H6,-6"
                class="ez-axis-path"
              >
              </path>
              <g
                transform="translate(0, 400.5)"
                class="ez-axis-tick"
              >
                <line
                  x2="-6"
                  y2="0"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  x="-9"
                  dy="0.3em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(-90 0 0)"
                  class="ez-axis-tick-text"
                >
                  50
                </text>
              </g>
              <g
                transform="translate(0, 360.5)"
                class="ez-axis-tick"
              >
                <line
                  x2="-6"
                  y2="0"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  x="-9"
                  dy="0.3em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(-90 0 0)"
                  class="ez-axis-tick-text"
                >
                  55
                </text>
              </g>
              <g
                transform="translate(0, 320.5)"
                class="ez-axis-tick"
              >
                <line
                  x2="-6"
                  y2="0"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  x="-9"
                  dy="0.3em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(-90 0 0)"
                  class="ez-axis-tick-text"
                >
                  60
                </text>
              </g>
              <g
                transform="translate(0, 280.5)"
                class="ez-axis-tick"
              >
                <line
                  x2="-6"
                  y2="0"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  x="-9"
                  dy="0.3em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(-90 0 0)"
                  class="ez-axis-tick-text"
                >
                  65
                </text>
              </g>
              <g
                transform="translate(0, 240.5)"
                class="ez-axis-tick"
              >
                <line
                  x2="-6"
                  y2="0"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  x="-9"
                  dy="0.3em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(-90 0 0)"
                  class="ez-axis-tick-text"
                >
                  70
                </text>
              </g>
              <g
                transform="translate(0, 200.5)"
                class="ez-axis-tick"
              >
                <line
                  x2="-6"
                  y2="0"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  x="-9"
                  dy="0.3em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(-90 0 0)"
                  class="ez-axis-tick-text"
                >
                  75
                </text>
              </g>
              <g
                transform="translate(0, 160.5)"
                class="ez-axis-tick"
              >
                <line
                  x2="-6"
                  y2="0"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  x="-9"
                  dy="0.3em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(-90 0 0)"
                  class="ez-axis-tick-text"
                >
                  80
                </text>
              </g>
              <g
                transform="translate(0, 120.50000000000001)"
                class="ez-axis-tick"
              >
                <line
                  x2="-6"
                  y2="0"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  x="-9"
                  dy="0.3em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(-90 0 0)"
                  class="ez-axis-tick-text"
                >
                  85
                </text>
              </g>
              <g
                transform="translate(0, 80.49999999999999)"
                class="ez-axis-tick"
              >
                <line
                  x2="-6"
                  y2="0"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  x="-9"
                  dy="0.3em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(-90 0 0)"
                  class="ez-axis-tick-text"
                >
                  90
                </text>
              </g>
              <g
                transform="translate(0, 40.49999999999999)"
                class="ez-axis-tick"
              >
                <line
                  x2="-6"
                  y2="0"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  x="-9"
                  dy="0.3em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(-90 0 0)"
                  class="ez-axis-tick-text"
                >
                  95
                </text>
              </g>
              <g
                transform="translate(0, 0.5)"
                class="ez-axis-tick"
              >
                <line
                  x2="-6"
                  y2="0"
                  class="ez-axis-tick-line"
                >
                </line>
                <text
                  x="-9"
                  dy="0.3em"
                  text-anchor="middle"
                  transform="translate(0, 0) rotate(-90 0 0)"
                  class="ez-axis-tick-text"
                >
                  100
                </text>
              </g>
            </g>
          </g>
        </svg>
      </div>
      <div class="ez-legend">
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: red; border: 2px solid red;"
          >
          </div>
          <span class="ez-legend-text">
            Alpha
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: blue; border: 2px solid blue;"
          >
          </div>
          <span class="ez-legend-text">
            Beta
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: green; border: 2px solid green;"
          >
          </div>
          <span class="ez-legend-text">
            Gamma
          </span>
        </div>
      </div>
    </div>
    <div
      class="ez-tooltip"
      style="left: 0px; top: 0px; opacity: 0;"
    >
    </div>
  </div>
</div>
`;
